--- a/.env.dev
+++ b/.env.dev
@@ -49,3 +49,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FIREBASE_AUTHENCATION_KEY=
