--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.6",
+        "iyzico/iyzipay-php": "^2.0",
         "kutia-software-company/larafirebase": "^1.3",
         "laravel/framework": "^8.40",
-        "laravel/telescope": "^4.6",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
         "maatwebsite/excel": "^3.1"
