--- a/.env.prod
+++ b/.env.prod
@@ -51,3 +51,7 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 FIREBASE_AUTHENCATION_KEY=
+
+IYZICO_API_KEY=
+IYZICO_SECRET_KEY=
+IYZICO_BASE_URL=
