--- a/.env.prod
+++ b/.env.prod
@@ -7,6 +7,8 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
+LOG_SLACK_WEBHOOK_URL=
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
