--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -12,9 +12,10 @@ jobs:
       uses: actions/checkout@v2.3.2
 
     - name: Install dependencies
-        uses: php-actions/composer@v6
-        with:
-          args: --optimize-autoloader --no-dev
+      uses: php-actions/composer@v6
+      with:
+        dev: no
+        command: --optimize-autoloader
 
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.0.0
