Github action fix.

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -15,6 +15,7 @@ jobs:
       uses: php-actions/composer@v6
       with:
         dev: no
+        php_version: 8.0
 
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.0.0
