Blade translate bug fix.

--- a/.env.dev
+++ b/.env.dev
@@ -12,9 +12,9 @@ LOG_SLACK_WEBHOOK_URL=
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=quizapplaravel
+DB_DATABASE=laerx
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
