--- a/.env.dev
+++ b/.env.dev
@@ -13,7 +13,7 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laerx
-DB_USERNAME=root
+DB_USERNAME=sail
 DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
