--- a/.env.prod
+++ b/.env.prod
@@ -13,7 +13,7 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laerx
-DB_USERNAME=root
+DB_USERNAME=sail
 DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
@@ -51,8 +51,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
-FIREBASE_AUTHENCATION_KEY=
 
 IYZICO_API_KEY=
 IYZICO_SECRET_KEY=
