--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "codenteq/laerx",
     "type": "project",
-    "description": "About An easy-to-use, free and open source laravel e-Exam platform to build your online course right away.",
+    "description": "Laerx Laravel E-Exam",
     "keywords": ["opensource", "laravel", "eExam", "management"],
     "license": "MIT",
     "require": {
