--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,8 @@
 {
     "name": "codenteq/laerx",
     "type": "project",
-    "description": "Laerx Laravel E-Exam",
-    "keywords": [
-        "opensource",
-        "laravel",
-        "eExam",
-        "management"
-    ],
+    "description": "The Laravel E-Exam Course Management",
+    "keywords": ["laravel", "framework", "e-exam"],
     "license": "MIT",
     "homepage": "https://codenteq.com",
     "authors": [
@@ -33,10 +28,6 @@
         {
             "type": "github",
             "url": "https://github.com/sponsors/codenteq"
-        },
-        {
-            "type": "open_collective",
-            "url": "https://opencollective.com/codenteq"
         }
     ],
     "require": {
